[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/gui/gui.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/audio/cena_2/vamos rapido.mp3" type="AudioStream" id=2]
[ext_resource path="res://scenes/narrador/narrador_2D_hand2.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player/player_2d.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/narrador/narrador_2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/narrador/narrador_2D_hand4.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/campaing/cena_2/cap_2_action.gd" type="Script" id=7]

[sub_resource type="GDScript" id=11]
script/source = "extends Node2D




func _process(_delta):
	global_position = get_global_mouse_position()
"

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id=16]
resource_name = "win"
length = 5.0
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.207843, 0.333333, 0.439216, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.168627, 0.266667, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.423529 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.333333, 0.439216, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.168627, 0.266667, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 2105, 67.75 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 140.5, 880.25 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 236, 872 )

[sub_resource type="GDScript" id=14]
script/source = "extends \"res://scripts/player/player_2d.gd\"

const BULLET := preload(\"res://scenes/player/bullet_2D.tscn\")
const SHOOT_DELAY := 0.12

var kills := 0 setget kills_count

var shoot_in_delay := 0.0
var can_shoot := true

onready var game_master := get_parent().get_parent()


func _physics_process(delta):
	if shoot_in_delay <= 0.0 and can_shoot and Input.is_action_pressed(\"mouse_click\"):
		shoot_in_delay = SHOOT_DELAY
		shot()
		motion -= global_position.direction_to(get_global_mouse_position()).normalized() * 100
	head.rect_position.x = -shoot_in_delay * 30
	
	if shoot_in_delay > 0.0: shoot_in_delay -= delta


func shot():
	var bullet = BULLET.instance()
	game_master.add_child(bullet)
	bullet.transform = shooter.global_transform
	AudioSystem.shot_audio(AudioSystem.BULLET_LAZER, -10)


func kills_count(value):
	kills = value
	if kills >= game_master.HORDE_SPAWN_PROGRESS[game_master.progress]:
		game_master.advance_progress()
		kills = 0
"

[node name="cap_2_action" type="Node2D"]
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="."]

[node name="background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.52549, 0.52549, 0.52549, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="gui" parent="." instance=ExtResource( 1 )]

[node name="mouse_aim" type="Node2D" parent="gui"]
position = Vector2( 2880, 1036 )
script = SubResource( 11 )

[node name="Panel" type="Panel" parent="gui/mouse_aim"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 2
custom_styles/panel = SubResource( 12 )

[node name="Panel2" type="Panel" parent="gui/mouse_aim/Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -2.0
margin_right = 10.0
margin_bottom = 4.00003
rect_pivot_offset = Vector2( 12, 3 )
mouse_filter = 2
custom_styles/panel = SubResource( 13 )

[node name="Panel3" type="Panel" parent="gui/mouse_aim/Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -74.0
margin_top = -2.0
margin_right = -50.0
margin_bottom = 4.00003
rect_pivot_offset = Vector2( 12, 3 )
mouse_filter = 2
custom_styles/panel = SubResource( 13 )

[node name="Panel4" type="Panel" parent="gui/mouse_aim/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -6.00003
margin_right = 12.0
rect_rotation = 89.9999
rect_pivot_offset = Vector2( 12, 3 )
mouse_filter = 2
custom_styles/panel = SubResource( 13 )

[node name="Panel5" type="Panel" parent="gui/mouse_aim/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -12.0
margin_right = 12.0
margin_bottom = 6.00003
rect_rotation = 89.9999
rect_pivot_offset = Vector2( 12, 3 )
mouse_filter = 2
custom_styles/panel = SubResource( 13 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/win = SubResource( 16 )

[node name="horizon" type="Polygon2D" parent="."]
position = Vector2( -186, -222 )
color = Color( 0.686275, 0.686275, 0.686275, 1 )
polygon = PoolVector2Array( 173, 353, 533, 336, 707, 344, 862, 340, 1070, 344, 1387, 343, 1555, 357, 1732, 348, 1988, 351, 2291, 335, 2455, 352, 2820, 346, 3029, 357, 3267, 343, 3555, 357, 3731, 337, 3920, 340, 4143, 322, 4340, 348, 4342, 846, 1982, 768, 148, 733 )

[node name="floor" type="Polygon2D" parent="."]
position = Vector2( -36, -280 )
color = Color( 0.941176, 0.941176, 0.941176, 1 )
polygon = PoolVector2Array( -8, 640, 1, 2313, 4182, 2325, 4149, 626, 4031, 658, 3899, 667, 1928, 640, 1800, 624, 1520, 632, 1448, 624, 1256, 632, 1168, 624, 1040, 632, 896, 624, 800, 640, 680, 640, 632, 648, 400, 648, 376, 640 )

[node name="horizon" type="Line2D" parent="floor"]
points = PoolVector2Array( -10, 633, 376, 640, 392, 648, 536, 648, 632, 648, 688, 640, 800, 640, 896, 624, 1048, 632, 1168, 624, 1248, 632, 1448, 624, 1512, 632, 1624, 632, 1808, 624, 1896, 632, 1944, 640, 2139, 642, 2354, 645, 2496, 642, 2615, 647, 2796, 650, 2957, 650, 3118, 656, 3322, 659, 3474, 656, 3621, 667, 3780, 667, 3907, 667, 4029, 656, 4139, 626 )
default_color = Color( 0.501961, 0.501961, 0.501961, 1 )
antialiased = true

[node name="narrador" parent="." instance=ExtResource( 5 )]
margin_left = -228.0
margin_top = 664.0
margin_right = -100.0
margin_bottom = 791.999
custom_styles/panel = SubResource( 8 )

[node name="shadow" type="Panel" parent="narrador"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -8.0
margin_top = 341.001
margin_right = 8.0
margin_bottom = 357.001
rect_scale = Vector2( 4.5, 0.900001 )
rect_pivot_offset = Vector2( 8, 8 )
custom_styles/panel = SubResource( 6 )

[node name="narrador_hand2" parent="." instance=ExtResource( 3 )]
margin_left = -525.0
margin_top = 265.0
margin_right = -401.0
margin_bottom = 360.0
custom_styles/panel = SubResource( 1 )

[node name="narrador_hand" parent="." instance=ExtResource( 6 )]
margin_left = 579.0
margin_top = -282.0
margin_right = 703.0
margin_bottom = -187.0

[node name="blocks" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocks"]
position = Vector2( 2050, 283.25 )
shape = SubResource( 9 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="blocks"]
position = Vector2( 2050, 2050 )
shape = SubResource( 9 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="blocks"]
position = Vector2( -101, 1150.75 )
shape = SubResource( 10 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="blocks"]
position = Vector2( 3444, 1168 )
shape = SubResource( 10 )

[node name="gate" type="Node2D" parent="."]
position = Vector2( 3300, 995 )

[node name="Polygon2D" type="Polygon2D" parent="gate"]
position = Vector2( 57, -1008 )
polygon = PoolVector2Array( 24, 2, -46, 556, -48, 892, 230, 888, 244, 6 )

[node name="Line2D" type="Line2D" parent="gate"]
position = Vector2( 141, -1017 )
points = PoolVector2Array( -57, -26, -130, 560, -133, 902, 150, 897, 161, -48, 3, -51, -133, 882 )
default_color = Color( 0.247059, 0.247059, 0.247059, 1 )

[node name="Polygon2D2" type="Polygon2D" parent="gate"]
position = Vector2( 144, -1001 )
polygon = PoolVector2Array( 60, -3, -126, 1297, -124, 1831, 176, 1835, 174, -7 )

[node name="Line2D2" type="Line2D" parent="gate"]
position = Vector2( 144, -1031 )
points = PoolVector2Array( 68, -14, -128, 1329, -125, 1864, 167, 1864, 173, 125, -122, 1838 )
default_color = Color( 0.247059, 0.247059, 0.247059, 1 )

[node name="start" type="Area2D" parent="."]
position = Vector2( 1408, 328 )
collision_layer = 0
collision_mask = 256
monitorable = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="start"]
position = Vector2( 436, 856 )
shape = SubResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="YSort" type="YSort" parent="."]

[node name="player_2d" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( -502, 496 )
rotation = 0.254818
collision_layer = 256
script = SubResource( 14 )

[node name="Camera2D" type="Camera2D" parent="YSort/player_2d"]
rotation = -0.254818
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = 0
limit_top = 0
limit_right = 3500
limit_bottom = 2000
smoothing_enabled = true
smoothing_speed = 7.0

[connection signal="body_entered" from="start" to="." method="_on_start_body_entered"]
[connection signal="suffered_damage" from="YSort/player_2d" to="." method="_on_player_2d_suffered_damage"]
